--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,12 +5,18 @@
 	required = true
 [user]
 	name = Ben Schreiber
-	email = ben.schreiber@pagaya.com
+	email = ben@joshuins.com
 [pull]
 	rebase = true
 [core]
 	excludesfile = ~/.gitignore_global
 [push]
   autoSetupRemote = true
-[blame]
-  ignoreRevsFile = .git-blame-ignore-revs
+# [blame]
+#   ignoreRevsFile = .git-blame-ignore-revs
+[credential "https://github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
