--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,109 +1,102 @@
 {
-  "C_Cpp.default.compilerPath": "/usr/bin/gcc",
-  "[jinja-sql]": {
-    "editor.defaultFormatter": "dorzey.vscode-sqlfluff"
-  },
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter",
-    "editor.formatOnType": true
-  },
-  "black-formatter.args": [
-    "-l 120"
-  ],
-  "dbt.enableNewLineagePanel": true,
-  "dbt.listModelsDisabled": true,
-  "dbt.runModelCommandAdditionalParams": [
-    "--profile=sf_stage"
-  ],
-  "dbt.versionCheck": "neither",
-  "editor.accessibilitySupport": "off",
-  "editor.bracketPairColorization.enabled": false,
-  "editor.cursorSmoothCaretAnimation": "on",
-  "editor.cursorStyle": "line-thin",
-  "editor.cursorSurroundingLines": 2,
-  "editor.detectIndentation": false,
-  "editor.fontFamily": "JetBrains Mono",
-  "editor.fontLigatures": true,
-  "editor.fontSize": 16,
-  "editor.lineNumbers": "relative",
-  "editor.minimap.enabled": false,
-  "editor.mouseWheelZoom": true,
-  "editor.tabCompletion": "on",
-  "explorer.confirmDelete": false,
-  "explorer.confirmDragAndDrop": false,
-  "files.associations": {
-    "*.sql": "jinja-sql"
-  },
-  "files.autoSave": "afterDelay",
-  "files.exclude": {
-    "**/.idea": true,
-    "**/.pytest_cache": true,
-    "**/.python-version": true,
-    "**/.svn": false,
-    "**/__pycache__": true,
-    "**/derby.log": true,
-    "**/metastore_db": true,
-    "**/spark-warehouse": true,
-    ".python-version": true
-  },
-  "git.branchProtection": [
-    "master",
-    "staging"
-  ],
-  "git.confirmSync": false,
-  "git.rebaseWhenSync": true,
-  "gitHistory.hideCommitViewExplorer": true,
-  "gitblame.inlineMessageEnabled": true,
-  "gitblame.statusBarMessageFormat": "${author.name} (${time.ago})",
-  "githubPullRequests.defaultCreateOption": "create",
-  "githubPullRequests.defaultMergeMethod": "rebase",
-  "githubPullRequests.fileListLayout": "tree",
-  "githubPullRequests.pullBranch": "never",
-  "githubPullRequests.terminalLinksHandler": "github",
-  "gitlens.advanced.messages": {
-    "suppressBlameInvalidIgnoreRevsFileWarning": true
-  },
-  "gitlens.currentLine.format": "${author, }${agoOrDate}",
-  "gitlens.hovers.currentLine.over": "line",
-  "gitlens.hovers.enabled": false,
-  "gitlens.outputLevel": "info",
-  "gitlens.plusFeatures.enabled": false,
-  "gitlens.virtualRepositories.enabled": false,
-  "isort.check": true,
-  "isort.showNotifications": "onWarning",
-  "jupyter.askForKernelRestart": false,
-  "mypy-type-checker.importStrategy": "fromEnvironment",
-  "mypy-type-checker.preferDaemon": true,
-  "notebook.cellToolbarLocation": {
-    "default": "right",
-    "jupyter-notebook": "right"
-  },
-  "notebook.lineNumbers": "on",
-  "notebook.output.scrolling": true,
-  "notebook.output.textLineLimit": 50,
-  "python.analysis.autoImportCompletions": true,
-  "python.analysis.useLibraryCodeForTypes": false,
-  "python.experiments.optInto": [
-    "All"
-  ],
-  "python.formatting.provider": "none",
-  "redhat.telemetry.enabled": false,
-  "sqlfluff.dialect": "snowflake",
-  "sqlfluff.executablePath": "/Users/Ben.schreiber/.pyenv/shims/sqlfluff",
-  "terminal.explorerKind": "external",
-  "terminal.external.osxExec": "iTerm.app",
-  "terminal.integrated.defaultProfile.osx": "zsh",
-  "terminal.integrated.env.osx": {
-    "DBT_ENV": "sf_prod",
-    "CW_NEW_SESSION": "1"
-},
-  "terminal.integrated.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
-  "terminal.integrated.tabs.location": "left",
-  "window.openFoldersInNewWindow": "on",
-  "workbench.productIconTheme": "developer-icons",
-"workbench.startupEditor": "none",
-"workbench.colorTheme": "Mariana Pro (Cool)",
-"vim.enableNeovim": true,
-"window.commandCenter": false,
-"notebook.diff.overviewRuler": true
+    "C_Cpp.default.compilerPath": "/usr/bin/gcc",
+    "[jinja-sql]": {
+        "editor.defaultFormatter": "dorzey.vscode-sqlfluff"
+    },
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnType": true
+    },
+    "black-formatter.args": ["-l 120"],
+    "dbt.enableNewLineagePanel": true,
+    "dbt.listModelsDisabled": true,
+    "dbt.runModelCommandAdditionalParams": ["--profile=sf_stage"],
+    "dbt.versionCheck": "neither",
+    "editor.accessibilitySupport": "off",
+    "editor.bracketPairColorization.enabled": false,
+    "editor.cursorSmoothCaretAnimation": "on",
+    "editor.cursorStyle": "line-thin",
+    "editor.cursorSurroundingLines": 2,
+    "editor.detectIndentation": false,
+    "editor.fontFamily": "JetBrains Mono",
+    "editor.fontLigatures": true,
+    "editor.fontSize": 16,
+    "editor.lineNumbers": "relative",
+    "editor.minimap.enabled": false,
+    "editor.mouseWheelZoom": true,
+    "editor.tabCompletion": "on",
+    "explorer.confirmDelete": false,
+    "explorer.confirmDragAndDrop": false,
+    "files.autoSave": "afterDelay",
+    "files.exclude": {
+        "**/.idea": true,
+        "**/.pytest_cache": true,
+        "**/.python-version": true,
+        "**/.svn": false,
+        "**/__pycache__": true,
+        "**/derby.log": true,
+        "**/metastore_db": true,
+        "**/spark-warehouse": true,
+        ".python-version": true
+    },
+    "git.branchProtection": ["master", "staging"],
+    "git.confirmSync": false,
+    "git.rebaseWhenSync": true,
+    "gitHistory.hideCommitViewExplorer": true,
+    "gitblame.inlineMessageEnabled": true,
+    "gitblame.statusBarMessageFormat": "${author.name} (${time.ago})",
+    "githubPullRequests.defaultCreateOption": "create",
+    "githubPullRequests.defaultMergeMethod": "rebase",
+    "githubPullRequests.fileListLayout": "tree",
+    "githubPullRequests.pullBranch": "never",
+    "githubPullRequests.terminalLinksHandler": "github",
+    "gitlens.advanced.messages": {
+        "suppressBlameInvalidIgnoreRevsFileWarning": true
+    },
+    "gitlens.currentLine.format": "${author, }${agoOrDate}",
+    "gitlens.hovers.currentLine.over": "line",
+    "gitlens.hovers.enabled": false,
+    "gitlens.outputLevel": "info",
+    "gitlens.plusFeatures.enabled": false,
+    "gitlens.virtualRepositories.enabled": false,
+    "isort.check": true,
+    "isort.showNotifications": "onWarning",
+    "jupyter.askForKernelRestart": false,
+    "mypy-type-checker.importStrategy": "fromEnvironment",
+    "mypy-type-checker.preferDaemon": true,
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "right"
+    },
+    "notebook.lineNumbers": "on",
+    "notebook.output.scrolling": true,
+    "notebook.output.textLineLimit": 50,
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.useLibraryCodeForTypes": false,
+    "python.experiments.optInto": ["All"],
+    "python.formatting.provider": "none",
+    "redhat.telemetry.enabled": false,
+    "sqlfluff.dialect": "snowflake",
+    "sqlfluff.executablePath": "/Users/Ben.schreiber/.pyenv/shims/sqlfluff",
+    "terminal.explorerKind": "external",
+    "terminal.external.osxExec": "iTerm.app",
+    "terminal.integrated.defaultProfile.osx": "zsh",
+    "terminal.integrated.env.osx": {
+        "DBT_ENV": "sf_prod",
+        "CW_NEW_SESSION": "1"
+    },
+    "terminal.integrated.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
+    "terminal.integrated.tabs.location": "left",
+    "window.openFoldersInNewWindow": "on",
+    "workbench.productIconTheme": "developer-icons",
+    "workbench.startupEditor": "none",
+    "workbench.colorTheme": "Mariana Pro (Cool)",
+    "vim.enableNeovim": true,
+    "window.commandCenter": false,
+    "notebook.diff.overviewRuler": true,
+    "snowflake.connectionsConfigFile": "/Users/benschreiber/.snowflake/connections.toml",
+    "git.openRepositoryInParentFolders": "never",
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
