--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -8,26 +8,19 @@
         "editor.formatOnType": true
     },
     "black-formatter.args": ["-l 120"],
-    "dbt.enableNewLineagePanel": true,
-    "dbt.listModelsDisabled": true,
-    "dbt.runModelCommandAdditionalParams": ["--profile=sf_stage"],
-    "dbt.versionCheck": "neither",
     "editor.accessibilitySupport": "off",
-    "editor.bracketPairColorization.enabled": false,
-    "editor.cursorSmoothCaretAnimation": "on",
     "editor.cursorStyle": "line-thin",
     "editor.cursorSurroundingLines": 2,
     "editor.detectIndentation": false,
-    "editor.fontFamily": "JetBrains Mono",
+    "editor.fontFamily": "Hasklig",
     "editor.fontLigatures": true,
-    "editor.fontSize": 16,
+    "editor.fontSize": 14,
     "editor.lineNumbers": "relative",
     "editor.minimap.enabled": false,
     "editor.mouseWheelZoom": true,
     "editor.tabCompletion": "on",
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
-    "files.autoSave": "afterDelay",
     "files.exclude": {
         "**/.idea": true,
         "**/.pytest_cache": true,
@@ -76,8 +69,6 @@
     "python.experiments.optInto": ["All"],
     "python.formatting.provider": "none",
     "redhat.telemetry.enabled": false,
-    "sqlfluff.dialect": "snowflake",
-    "sqlfluff.executablePath": "/Users/Ben.schreiber/.pyenv/shims/sqlfluff",
     "terminal.explorerKind": "external",
     "terminal.external.osxExec": "iTerm.app",
     "terminal.integrated.defaultProfile.osx": "zsh",
@@ -88,15 +79,21 @@
     "terminal.integrated.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
     "terminal.integrated.tabs.location": "left",
     "window.openFoldersInNewWindow": "on",
-    "workbench.productIconTheme": "developer-icons",
     "workbench.startupEditor": "none",
-    "workbench.colorTheme": "Mariana Pro (Cool)",
     "vim.enableNeovim": true,
-    "window.commandCenter": false,
     "notebook.diff.overviewRuler": true,
-    "snowflake.connectionsConfigFile": "/Users/benschreiber/.snowflake/connections.toml",
     "git.openRepositoryInParentFolders": "never",
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    "search.collapseResults": "alwaysCollapse",
+    "search.exclude": {
+        "**/target": true
+    },
+    "workbench.colorTheme": "Dracula Theme",
+    "files.autoSaveDelay": 2000,
+    "rust-analyzer.testExplorer": true,
+    "rust-analyzer.cargo.features": "all",
+    "rust-analyzer.check.features": "all",
+    "task.allowAutomaticTasks": "on"
 }
