Fix cursor/vscode installations & more cleanup

--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -110,5 +110,5 @@
     "[github-actions-workflow]": {
         "editor.defaultFormatter": "redhat.vscode-yaml"
     },
-    "workbench.colorTheme": "GitHub Dark Default"
+    "workbench.colorTheme": "Dracula Theme"
 }
